--- a/appinfo.json
+++ b/appinfo.json
@@ -18,6 +18,11 @@
                 "name": "IMAGE_TITLE",
                 "type": "bitmap"
             },
+               {
+                "file": "images/earth.png",
+                "name": "IMAGE_earth",
+                "type": "bitmap"
+            },
             {
                 "file": "images/shop.png",
                 "name": "IMAGE_SHOP",
